--- a/winch/web/www/app/views/board.html
+++ b/winch/web/www/app/views/board.html
@@ -1,4 +1,4 @@
-<div>
+<div class="kb-container">
     <div class="kb-title">
         {{ board.title }} 
     </div>
@@ -6,9 +6,9 @@
         <div class="kb-column" x-ng-repeat="column in board.columns">
             <div class="kb-title">{{ column.title }}</div>
                 <div x-ng-repeat="card in column.cards">
-                    <div class="card">
-                        <div class="caption">
-                        {{ card.title }}
+                    <div class="kb-card">
+                        <div class="kb-caption">
+                            {{ card.createdwhen }}
                         </div>
                     </div>
                 </div>
